log
Thu, Mar 20, 2025  5:25:05 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:33:02 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:8: error: expected expression before ')' token
       ()
        ^
exercises.c:58:8: error: unused variable 'suma' [-Werror=unused-variable]
    int suma = 5;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
09dcc48
